--- a/client/src/index.html
+++ b/client/src/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <canvas id="glcanvas" tabindex='1'></canvas>
-    <script src="bundle.js"></script>
-    <script>load("scalliony.wasm");</script>
+    <script src="{root}bundle{js-id}.js"></script>
+    <script>load("{root}game{wasm-id}.wasm");</script>
 </body>
 </html>
