--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Scalliony</title>
-    <style>
-        html,
-        body,
-        canvas {
-            margin: 0px;
-            padding: 0px;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            position: absolute;
-            background: black;
-            z-index: 0;
-        }
-    </style>
-</head>
-<body>
-    <canvas id="glcanvas" tabindex='1'></canvas>
-    <script src="{root}bundle{js-id}.js"></script>
-    <script>load("{root}game{wasm-id}.wasm");</script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><meta charset=utf-8><title>Scalliony</title><style>body,canvas,html{margin:0;padding:0;width:100%;height:100%;overflow:hidden;position:absolute;background:#000;z-index:0}</style><canvas id=glcanvas tabindex=1></canvas><script src={js}></script><script>load("{wasm}")</script>
